[tool.poetry]
name = "trello-board-parser"
version = "0.1.0"
description = "This script will convert json trello board to csv format"
authors = ["Karim-Valeev"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pytz = "~2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
